tests/ui/integer_not_newtype.stderr
error: expected a struct
 --> tests/ui/integer_not_newtype.rs:4:1
  |
4 | / enum BadId {
5 | |     Variant,
6 | | }
  | |_^
