tests/ui/integer_not_newtype.rs
use identifiers::IntegerIdentifier;

#[derive(IntegerIdentifier)]
enum BadId {
    Variant,
}

fn main() {}
